[package]
name = "sn_ffi"
version = "0.1.0"
authors = ["loziniak <maciej@robotix-lozinski.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sn_api = "0.21.0"

## override sn_client with 0.52.3 and sn_data_types with 0.18.0
## due to https://github.com/maidsafe/qp2p/issues/244
sn_api = { git = "https://github.com/loziniak/sn_api", branch = "sn-ffi" }

[lib]
name = "sn_ffi"
crate-type = ["cdylib"]
