[package]
name = "sn_ffi"
version = "0.1.0"
authors = ["loziniak <maciej@robotix-lozinski.pl>"]
edition = "2018"

[dependencies]
tokio = "1.5.0"
sn_api = "~0.38"
safe_network = "= 0.33.18"
redbin = { path = "../../redbin" }
bls = { package = "blsttc", version = "*" }

[lib]
name = "sn_ffi"
crate-type = ["cdylib"]
