[package]
name = "sn_ffi"
version = "0.1.0"
authors = ["loziniak <maciej@robotix-lozinski.pl>"]
edition = "2018"

[dependencies]
tokio = "1.6.0"
sn_api = { path = "../../../github/safe_network_archived/sn_api" }
safe_network = "= 0.55.3"
redbin = { path = "../../../redbin" }
bls = { package = "blsttc", version = "*" }
bytes = "1.0.1"

[lib]
name = "sn_ffi"
crate-type = ["cdylib"]
